Add html tags for debugging

--- a/projection_info.html
+++ b/projection_info.html
@@ -1,3 +1,4 @@
+<html><body>
 <h1>About this map</h1>
 
 <p>
@@ -6,3 +7,4 @@ This map was was created by <a href="http://stamen.com">Stamen Design</a>, a dat
 The map uses a custom <a href="http://en.wikipedia.org/wiki/Map_projection">map projection</a> to show the true sizes of the coastal areas of the United States and Canada. Most web-based maps use the <a href="http://en.wikipedia.org/wiki/Mercator_projection">Mercator projection</a>, which distorts the sizes of regions near the poles, making Northern Canada and the Arctic Ocean appear much larger than they really are.
 <p>
 Our map uses a <a href="http://en.wikipedia.org/wiki/Lambert_azimuthal_equal-area_projection">Lambert Azimuthal Equal-area projection</a> which has been modified so that the center of the projection is at 105&deg;W, 40&deg;N. This projection shows accurate sizes everywhere on the map. However, as a side effect, north is not always "up" on this map. As you look at places that are further away from the center of the map, the curvature of the earth becomes apparent. Keep your eye on the <em>graticule lines</em> (the grid of thin blue lines out in the ocean) to help you figure out which direction is north.
+</body></html>
