Title for the more data section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div class="modal-inner">
           <button class="link modal-close">×</button>
           <div class="modal-content txt-copy">
+            <h3>Fill up the map!</h3>
             <p>Are there planning areas we should add to the map? Send us a shapefile! See the <a href="https://github.com/stamen/moore/blob/master/SHAPEFILE_SPECIFICATIONS.md" target="_blank" title="Documentation to submit a shapefile">Shapefile Specifications</a> documentation for more instructions.</p>
           </div>
         </div>
