--- a/embed.html
+++ b/embed.html
@@ -28,9 +28,6 @@
     <div class="container block-group">
 
 
-
-
-
       <header class="nav block">
         <div>
           <h1 class="heading"><a href="/">Ocean Planning</a></h1>
@@ -117,6 +114,8 @@
     <script type="text/javascript" src="js/stamen/stamen.utils.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.hasher.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.embeddem.js"></script>
+    <script type="text/javascript" src="js/stamen/stamen.tile-layer.js"></script>
+    <script type="text/javascript" src="js/stamen/stamen.leaflet-sandwhich.js"></script>
 
     <script type="text/javascript" src='js/MFOM.config.js'></script>
     <script type="text/javascript" src='js/MFOM.data.js'></script>
