--- a/embed.html
+++ b/embed.html
@@ -37,8 +37,6 @@
 
       <section class="main block">
         <div id='map'></div>
-
-
         <!-- layer controls -->
         <div id="overlaySelectr" class="dropdown">
           <a href="#" class="icon map-layers">
@@ -46,53 +44,11 @@
                 <path d="M0 0h24v24h-24z" fill="none"/>
                 <path d="M11.99 18.54l-7.37-5.73-1.62 1.26 9 7 9-7-1.63-1.27-7.38 5.74zm.01-2.54l7.36-5.73 1.64-1.27-9-7-9 7 1.63 1.27 7.37 5.73z"/>
             </svg>
-
           </a>
+          <button id="overlaySelectr-close" class="link">&times;</button>
           <div class="inner"></div>
         </div>
         <!-- end layer controls -->
-
-        <!-- filter & details panel -->
-        <div class="panel filters">
-          <!-- filter by -->
-          <p class='txt-copy panel-headline'>Filter by status:</p>
-          <div class="filter-row status-filters">
-            <ul class="clearfix">
-              <li><button class="link filter-btn" data-key="Status" data-value="reset">All</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="completed">Completed</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="stalled">Stalled</button></li>
-            </ul>
-          </div>
-
-          <div class="tabs">
-            <button id="resetButton" class="link"><!--<span class="icon-close">&#x2715;</span>--> clear</button>
-            <div class="filter-row">
-              <ul class="clearfix">
-                <li><button class="link" data-target="details">Details</button></li>
-                <li><button class="link selected" data-target="description">Description</button></li>
-              </ul>
-            </div>
-            <div class="tabs-inner">
-              <div class="tab" data-tab="details">
-                <ul>
-                  <li data-key="Location"><span class="key">Plan Name:</span><span class="value"></span></li>
-                  <li data-key="Status"><span class="key">Status:</span><span class="value"></span></li>
-                  <li data-key="Date planning initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
-                  <li data-key="Date plan completed"><span class="key">Date Completed:</span><span class="value"></span></li>
-                  <li data-key="Ocean activities covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
-                  <li data-key="Lead institution(s)"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
-                  <li data-key="Website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
-                </ul>
-              </div>
-              <div class="tab hide" data-tab="description">
-                <p class="txt-copy">Select a planning area.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end filter & details panel -->
       </section>
 
     </div> <!-- end container -->
