--- a/embed.html
+++ b/embed.html
@@ -13,6 +13,22 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/leaflet.groupedlayercontrol.css">
 
+<!--[if lte IE 9]>
+  <style>
+  .modal-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+  }
+  </style>
+<![endif]-->
+
 </head>
   <body id="embedded">
     <svg style="display:none;">
