Initial split of filter & detail panels

--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
               <li><button class="link filter-btn" data-key="status" data-value="stalled">Stalled<span class="counts"></span></button></li>
             </ul>
           </div>
+        </div>
 
+        <div class="panel details">
           <div class="tabs">
             <button id="resetButton" class="link"><!--<span class="icon-close">&#x2715;</span>--> clear</button>
             <div class="filter-row">
@@ -251,6 +253,7 @@
     <script type="text/javascript" src='js/MFOM.data.js'></script>
     <script type="text/javascript" src='js/MFOM.map.js'></script>
     <script type="text/javascript" src='js/MOFM.filterPanel.js'></script>
+    <script type="text/javascript" src='js/MFOM.detailsPanel.js'></script>
     <script type="text/javascript" src='js/MFOM.modal.js'></script>
     <script type="text/javascript" src='js/MFOM.main.js'></script>
 
