Correctly namespaced filter panel js

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <script type="text/javascript" src='js/MFOM.config.js'></script>
     <script type="text/javascript" src='js/MFOM.data.js'></script>
     <script type="text/javascript" src='js/MFOM.map.js'></script>
-    <script type="text/javascript" src='js/MOFM.filterPanel.js'></script>
+    <script type="text/javascript" src='js/MFOM.filterPanel.js'></script>
     <script type="text/javascript" src='js/MFOM.detailsPanel.js'></script>
     <script type="text/javascript" src='js/MFOM.modal.js'></script>
     <script type="text/javascript" src='js/MFOM.main.js'></script>
