Selecting countries happen in layer controls, #77
Removed country buttons in nav
Added "i" button in nav

--- a/embed.html
+++ b/embed.html
@@ -94,6 +94,7 @@
     <script type="text/javascript" src='js/MFOM.map.js'></script>
     <script type="text/javascript" src='js/MFOM.filterPanel.js'></script>
     <script type="text/javascript" src='js/MFOM.detailsPanel.js'></script>
+    <script type="text/javascript" src='js/MFOM.layerControls.js'></script>
     <script type="text/javascript" src='js/MFOM.modal.js'></script>
     <script type="text/javascript" src='js/MFOM.main.js'></script>
 
