--- a/index.html
+++ b/index.html
@@ -32,18 +32,9 @@
 
 </head>
   <body>
-    <svg style="display:none;">
-      <defs>
 
-        <g id="map-layers">
-            <path d="M0 0h24v24h-24z" fill="none"/>
-            <path d="M11.99 18.54l-7.37-5.73-1.62 1.26 9 7 9-7-1.63-1.27-7.38 5.74zm.01-2.54l7.36-5.73 1.64-1.27-9-7-9 7 1.63 1.27 7.37 5.73z"/>
-        <g>
-
-      </defs>
-    </svg>
     <div class="container block-group">
-
+      <!-- MODALS -->
       <div id="about-modal-all" class="panel modal hide">
         <div class="modal-background modal-close"></div>
         <div class="modal-inner">
@@ -124,11 +115,22 @@
           <p class="sub-heading">United States and Canada</p>
         </div>
         <div>
+          <!--
           <ul id="country-selector" class="horizontal-list">
           <li><button class="link country-btn" data-country="all">ALL</button><a href="#" id="about-all" class="info-btn modal-activator" data-target="about-modal-all">i</a></li>
           <li><button class="link country-btn" data-country="usa">U.S.</button><a href="#" id="about-us" class="info-btn modal-activator" data-target="about-modal-us">i</a></li>
           <li><button class="link country-btn" data-country="can">CANADA</button><a href="#" id="about-canada" class="info-btn modal-activator" data-target="about-modal-ca">i</a></li>
           </ul>
+          -->
+          <button id="info-btn" class="link">
+            <svg width="32" height="32" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+            <path id="info-2-icon" d="M255.998,90.001c91.74,0,166.002,74.241,166.002,165.998c0,91.741-74.245,166-166.002,166
+            c-91.74,0-165.998-74.243-165.998-166C90,164.259,164.243,90.001,255.998,90.001 M255.998,50.001
+            C142.229,50.001,50,142.229,50,255.999c0,113.771,92.229,206,205.998,206c113.771,0,206.002-92.229,206.002-206
+            C462,142.229,369.77,50.001,255.998,50.001L255.998,50.001z M285.822,367.567h-57.646V230.6h57.646V367.567z M257,202.268
+            c-17.522,0-31.729-14.206-31.729-31.73c0-17.522,14.206-31.729,31.729-31.729c17.524,0,31.728,14.206,31.728,31.729
+            C288.728,188.062,274.524,202.268,257,202.268z"></path> </svg>
+          </button>
         </div>
       </header>
 
@@ -229,8 +231,6 @@
 
     </div> <!-- end container -->
 
-
-
     <script type="text/javascript" src="js/vendor/leaflet-0.7.3.js"></script>
     <script type="text/javascript" src='js/vendor/leaflet.ajax.min.js'></script>
     <script type="text/javascript" src='js/vendor/d3.v3.min.js'></script>
@@ -254,6 +254,7 @@
     <script type="text/javascript" src='js/MFOM.map.js'></script>
     <script type="text/javascript" src='js/MFOM.filterPanel.js'></script>
     <script type="text/javascript" src='js/MFOM.detailsPanel.js'></script>
+    <script type="text/javascript" src='js/MFOM.layerControls.js'></script>
     <script type="text/javascript" src='js/MFOM.modal.js'></script>
     <script type="text/javascript" src='js/MFOM.main.js'></script>
 
