Change "More Data" to "Feedback", #82

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <div id="additional-actions" class="panel">
           <button id="embed-btn" class="link btn-large">Embed</button>
-          <button id="more-data-btn" class="link btn-large modal-activator" data-target="more-data-modal">More Data</button>
+          <button id="more-data-btn" class="link btn-large modal-activator" data-target="more-data-modal">Feedback</button>
         </div>
 
         <!-- layer controls -->
