Initial implementation of map legend, #64

--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
         </div>
         <!-- end filter & details panel -->
 
+        <!-- legend -->
+        <div id="legend">
+          <ul>
+            <li><i class="icon"></i><span>Exclusive Economic Zone</span></li>
+            <li><i class="icon"></i><span>Implemented Plans</span></li>
+            <li><i class="icon"></i><span>Plan Underway</span></li>
+            <li><i class="icon"></i><span>Pre-Planning</span></li>
+            <li><i class="icon"></i><span>Stalled</span></li>
+            <li><i class="icon"></i><span>Planning area boundary<br/>unavailable or undefined</span></li>
+          </ul>
+          <!--<img src="assets/icons/legend@2x.png"/>-->
+        </div>
+
       </section>
 
       <!-- embed -->
