--- a/index.html
+++ b/index.html
@@ -111,26 +111,17 @@
 
       <header class="nav block">
         <div>
-          <h1 class="heading">Ocean Planning</h1>
-          <p class="sub-heading">United States and Canada</p>
-        </div>
-        <div>
-          <!--
-          <ul id="country-selector" class="horizontal-list">
-          <li><button class="link country-btn" data-country="all">ALL</button><a href="#" id="about-all" class="info-btn modal-activator" data-target="about-modal-all">i</a></li>
-          <li><button class="link country-btn" data-country="usa">U.S.</button><a href="#" id="about-us" class="info-btn modal-activator" data-target="about-modal-us">i</a></li>
-          <li><button class="link country-btn" data-country="can">CANADA</button><a href="#" id="about-canada" class="info-btn modal-activator" data-target="about-modal-ca">i</a></li>
-          </ul>
-          -->
-          <button id="info-btn" class="link">
-            <svg width="32" height="32" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-            <path id="info-2-icon" d="M255.998,90.001c91.74,0,166.002,74.241,166.002,165.998c0,91.741-74.245,166-166.002,166
-            c-91.74,0-165.998-74.243-165.998-166C90,164.259,164.243,90.001,255.998,90.001 M255.998,50.001
-            C142.229,50.001,50,142.229,50,255.999c0,113.771,92.229,206,205.998,206c113.771,0,206.002-92.229,206.002-206
-            C462,142.229,369.77,50.001,255.998,50.001L255.998,50.001z M285.822,367.567h-57.646V230.6h57.646V367.567z M257,202.268
-            c-17.522,0-31.729-14.206-31.729-31.73c0-17.522,14.206-31.729,31.729-31.729c17.524,0,31.728,14.206,31.728,31.729
-            C288.728,188.062,274.524,202.268,257,202.268z"></path> </svg>
-          </button>
+          <h1 class="heading">Ocean Planning<button id="info-btn" class="link modal-activator" data-target="about-modal-all">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 42.8 42.8" enable-background="new 0 0 42.8 42.8" xml:space="preserve">
+            <circle fill="#FFFFFF " stroke="#000000 " stroke-width="4" stroke-miterlimit="10" cx="21.4" cy="21.4" r="19.7"/>
+            <g>
+                <circle cx="21.3" cy="10.7" r="3"/>
+                <polygon points="24.5,31.9 24.5,19.5 24.5,16.1 16.5,16.1 16.5,19.5 18.5,19.5 18.5,31.9 16.5,31.9 16.5,35.1 26.3,35.1 26.3,31.9
+                        "/>
+            </g>
+            </svg>
+          </button></h1>
+          <p class="sub-heading"><button class="link modal-activator" data-target="about-modal-us">United States</button> and <button class="link modal-activator" data-target="about-modal-ca">Canada</button></p>
         </div>
       </header>
 
