--- a/index.html
+++ b/index.html
@@ -135,14 +135,16 @@
         </div>
 
         <!-- layer controls -->
-        <div id="overlaySelectr" class="dropdown">
+        <div id="overlaySelectr" class="dropdown expanded">
+          <!--
           <a href="#" class="icon map-layers">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path d="M0 0h24v24h-24z" fill="none"/>
                 <path d="M11.99 18.54l-7.37-5.73-1.62 1.26 9 7 9-7-1.63-1.27-7.38 5.74zm.01-2.54l7.36-5.73 1.64-1.27-9-7-9 7 1.63 1.27 7.37 5.73z"/>
             </svg>
           </a>
-          <button id="overlaySelectr-close" class="link">&times;</button>
+          -->
+          <button id="overlaySelectr-close" class="link">&raquo;</button>
           <div class="inner"></div>
         </div>
         <!-- end layer controls -->
