Revised Embed and Feedback buttons, #83
Merged all left hand side panels into a parent panel, #77
Layer selector minor UI tweaks, #77
Updated info icon, #77
Auto-adjusting layer selector max-height, #77
Map legend moved to filter panel, #64
Details panel visual tweaks to bring in line with filter panel

--- a/embed.html
+++ b/embed.html
@@ -30,7 +30,7 @@
 <![endif]-->
 
 </head>
-  <body id="embedded">
+  <body id="embedded" class="loading">
     <svg style="display:none;">
       <defs>
 
