Layer picker works in IE9, #81
Checkbox inside button problem fixed

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       <header class="nav block">
         <div>
           <h1 class="heading">Ocean Planning<button id="info-btn" class="link modal-activator" data-target="about-modal-all">
+            <!--
             <svg version="1.1" width="21px" height="21px" x="0px" y="0px"
                viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
             <circle fill="#FFFFFF" stroke="#000000" stroke-width="2.132" stroke-miterlimit="10" cx="12" cy="12" r="10.5"/>
@@ -121,6 +122,8 @@
                 9.388,19.302 14.612,19.302 14.612,17.596  "/>
             </g>
             </svg>
+            -->
+            <img src="assets/icons/i_21px.svg"/>
           </button></h1>
           <p class="sub-heading"><button class="link modal-activator" data-target="about-modal-us">United States</button> and <button class="link modal-activator" data-target="about-modal-ca">Canada</button></p>
         </div>
