--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <!--[if lt IE 10]>    <html class="no-js ie-lte9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-
 <head>
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Moore Foundation map prototype by Stamen Design</title>
+<title>Oceanplanning</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -144,17 +143,8 @@
       <section class="main block">
         <div id='map'></div>
 
-
         <!-- layer controls -->
         <div id="overlaySelectr" class="dropdown expanded">
-          <!--
-          <a href="#" class="icon map-layers">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M0 0h24v24h-24z" fill="none"/>
-                <path d="M11.99 18.54l-7.37-5.73-1.62 1.26 9 7 9-7-1.63-1.27-7.38 5.74zm.01-2.54l7.36-5.73 1.64-1.27-9-7-9 7 1.63 1.27 7.37 5.73z"/>
-            </svg>
-          </a>
-          -->
           <button id="overlaySelectr-close" class="link">&raquo;</button>
           <div class="scroll-wrap">
           <div class="inner"></div>
@@ -265,9 +255,7 @@
     </div> <!-- end container -->
 
     <script type="text/javascript" src="js/vendor/leaflet-0.7.3.js"></script>
-    <script type="text/javascript" src='js/vendor/leaflet.ajax.min.js'></script>
     <script type="text/javascript" src='js/vendor/d3.v3.min.js'></script>
-    <script type="text/javascript" src='js/vendor/queue.v1.min.js'></script>
     <script type="text/javascript" src='js/vendor/proj4-compressed.js'></script>
     <script type="text/javascript" src='js/vendor/proj4leaflet.js'></script>
     <script type="text/javascript" src='js/vendor/topojson.v1.min.js'></script>
