--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,300italic,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+
+<!-- build:css css/index.min.css -->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/pocketgrid.min.css">
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <link rel="stylesheet" type="text/css" href="css/rrose.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/leaflet.groupedlayercontrol.css">
+<!-- endbuild -->
 
 
 <!--[if lte IE 9]>
@@ -209,20 +212,6 @@
         </div>
         <!-- end filter & details panel -->
 
-        <!-- legend -->
-        <!--
-        <div id="legend">
-          <ul>
-            <li><i class="icon"></i><span>Exclusive Economic Zone</span></li>
-            <li><i class="icon"></i><span>Implemented Plans</span></li>
-            <li><i class="icon"></i><span>Plan Underway</span></li>
-            <li><i class="icon"></i><span>Pre-Planning</span></li>
-            <li><i class="icon"></i><span>Stalled</span></li>
-            <li><i class="icon"></i><span>Planning area boundary<br/>unavailable or undefined</span></li>
-          </ul>
-          <!--<img src="assets/icons/legend@2x.png"/>--><!--
-        </div>-->
-
       </section>
 
       <!-- embed -->
@@ -254,6 +243,7 @@
 
     </div> <!-- end container -->
 
+    <!-- build:js scripts/index.min.js -->
     <script type="text/javascript" src="js/vendor/leaflet-0.7.3.js"></script>
     <script type="text/javascript" src='js/vendor/d3.v3.min.js'></script>
     <script type="text/javascript" src='js/vendor/proj4-compressed.js'></script>
@@ -278,6 +268,7 @@
     <script type="text/javascript" src='js/MFOM.layerControls.js'></script>
     <script type="text/javascript" src='js/MFOM.modal.js'></script>
     <script type="text/javascript" src='js/MFOM.main.js'></script>
+    <!-- endbuild -->
 
     <script type="text/javascript">
     //MFOM
