Moved to feedback & embed btns out of filter panel

--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@
             </ul>
           </div>
 
-          <div id="additional-actions" class="">
-            <button id="embed-btn" class="link btn-small inverse">Embed</button>
-            <button id="more-data-btn" class="link btn-small modal-activator inverse" data-target="more-data-modal">Feedback</button>
-          </div>
+
+        </div>
+
+        <div id="additional-actions" class="panel">
+          <button id="embed-btn" class="link btn-small inverse">Embed</button>
+          <button id="more-data-btn" class="link btn-small modal-activator inverse" data-target="more-data-modal">Feedback</button>
         </div>
 
 
