Reflect latest commit to github.io

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
             <h3>Ocean planning</h3>
             <p>Ocean planning is a multi-stakeholder, data-driven public process to understand what people want for the future of their oceans, analyze the trade-offs among different uses of ocean space and resources, and coordinate management in a way that maximizes ecological, economic, and social values.</p>
 
-            <p>In the last decade, the practice of ocean planning has grown in use across the planet, and for good reason. Ocean planning can be used to improve decision-making and management, protect and conserve ocean wildlife, reduce conflicts among interests, and increase efficiency in the use of public resources such as tax dollars and agency staff time. If done well, ocean planning can yield benefits for coastal communities and ocean industries desiring attractive and healthy seascapes, a more certain regulatory framework and reduced conflicts with other ocean users.</p>
+            <p>In the last decade, the practice of ocean planning has grown in use around the world, and for good reason. Ocean planning can be used to improve decision-making and management, protect and conserve ocean wildlife, reduce conflicts among interests, and increase efficiency in the use of public resources such as tax dollars and agency staff time. If done well, ocean planning can yield benefits for coastal communities and ocean industries desiring attractive and healthy seascapes, a more certain regulatory framework and reduced conflicts with other ocean users.</p>
 
-            <p>This approach to managing ocean space and resources is increasingly being adopted by governments in the US and Canada and ocean stakeholders. And, this map provides a window into the proliferation of this approach in these two countries, the individual planning efforts underway and completed, and information about each effort.</p>
+            <p>This approach to managing ocean space and resources is increasingly being adopted by governments, ocean industries, coastal communities, and other stakeholders in the US and Canada. This map provides a window into the proliferation of this approach in these two countries, the planning efforts that are underway and completed, and information about each effort.</p>
 
-            <p>If you have information about a new planning effort or updated data about an effort underway, please let us know! Click on the &ldquo;Feedback?&rdquo; button in the lower right of the map, and we&rsquo;ll work with you to make sure the information for each entry is current.</p>
+            <p>In order to provide the most complete picture possible of ocean planning in the US and Canada, this catalogue takes a “big-tent” approach, including all processes that self-identify as ocean planning. The individual descriptions provide clarification on each process, including whether it is comprehensive of all uses, an important element of ocean planning.</p>
+
+            <p>If you have information about a new planning effort or updated data about an effort underway, please let us know! Click on the “Feedback?” button in the lower-right corner of the map and we will work with you to make sure the information for each entry is current.</p>
           </div>
         </div>
       </div>
@@ -113,8 +115,8 @@
         <div class="modal-inner">
           <button class="link modal-close">×</button>
           <div class="modal-content txt-copy">
-            <h3>About the basemap</h3>
-            <p>This map was was created by <a href="http://stamen.com">Stamen Design</a>, a data visualization and cartography studio based in San Francisco.</p>
+            <h3>About the map</h3>
+            <p>This map was created by <a href="http://stamen.com">Stamen Design</a>, a data visualization and cartography studio based in San Francisco, and funded by the <a href="http://www.moore.org/">Gordon and Betty Moore Foundation</a>.</p>
             <p>The map uses a custom <a href="http://en.wikipedia.org/wiki/Map_projection">map projection</a> to show the true sizes of the coastal areas of the United States and Canada. Most web-based maps use the <a href="http://en.wikipedia.org/wiki/Mercator_projection">Mercator projection</a>, which distorts the sizes of regions near the poles, making Northern Canada and the Arctic Ocean appear much larger than they really are.</p>
             <p>Our map uses a <a href="http://en.wikipedia.org/wiki/Lambert_azimuthal_equal-area_projection">Lambert Azimuthal Equal-area projection</a> which has been modified so that the center of the projection is at 105&deg;W, 40&deg;N. This projection shows accurate sizes everywhere on the map. However, as a side effect, north is not always "up" on this map. As you look at places that are further away from the center of the map, the curvature of the earth becomes apparent. Keep your eye on the <em>graticule lines</em> (the grid of thin blue lines out in the ocean) to help you figure out which direction is north.</p>
           </div>
