Add disclaimer that NE and Mid-Atlantic regions are not official

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             <p>In order to provide the most complete picture possible of ocean planning in the US and Canada, this catalogue takes a “big-tent” approach, including all processes that self-identify as ocean planning. The individual descriptions provide clarification on each process, including whether it is comprehensive of all uses, an important element of ocean planning.</p>
 
             <p>If you have information about a new planning effort or updated data about an effort underway, please let us know! Click on the “Feedback?” button in the lower-right corner of the map and we will work with you to make sure the information for each entry is current.</p>
+
+            <p>Note: Data development boundaries for the Mid-Atlantic and Northeast Regions are used as placeholders until official planning boundaries are available.</p>
           </div>
         </div>
       </div>
